--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: 赵天旭的博客
-SEOTitle: 赵天旭的博客
+title: ztx的博客
+SEOTitle: ztx的博客
 header-img: img/post-bg-desk.jpg
 email: ztx398359142@163.com
 description: "Every failure is leading towards success."
